src/objects/MDO_GeographySubscriptions__c.object
<CustomObject>
    <description>store mdo geography subscriptions master data</description>
    <fields>
        <fullName>geo_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geo ID</label>
        <referenceTo>MDO_Geography__c</referenceTo>
        <relationshipLabel>GeographySubscriptions</relationshipLabel>
        <relationshipName>GeographySubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mdo_id__c</fullName>
        <description>store mdm id</description>
        <label>MDO ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscription_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup relationship with subscription object with geipraphy subscriptions</description>
        <label>Subscription Id</label>
        <referenceTo>MDO_Subscriptions__c</referenceTo>
        <relationshipLabel>GeographySubscriptions</relationshipLabel>
        <relationshipName>GeographySubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GeographySubscriptions</label>
    <nameField>
        <displayFormat>GSUB-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GeographySubscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>